format css page

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
-styles page 
+body{
+
+}
+form{
+
+}
+label{
+
+}
+input{
+/* types:text, range, disabled*/
+}
+h1{
+
+}
+h2{
+
+}
+#tipPercentage, #tipAmount #totalBill{
+
+}
