--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body{
 .tipCalc{
     background-color: lightgray;
     padding:20px;
-    border: 5px black;
+    border: 5px solid black;
     width: 400px;
     margin: 0 auto;
 }
@@ -29,7 +29,7 @@ label{
 input {
     width: 90%;
     padding: 10px;
-    border: 1px black; 
+    border: 1px solid black; 
     margin: 0 10px 10px 0;
 }
 
